Fix padding on mobile sizing

--- a/style.css
+++ b/style.css
@@ -654,7 +654,7 @@ footer > p {
         max-width: 1300px;
         display: grid;
         grid-template-columns: 1fr 1fr;
-        padding: 120px 0px 100px 0px;
+        padding: 120px 10px 100px 10px;
         justify-self: center;
     }
 
@@ -673,7 +673,7 @@ footer > p {
         position: relative;
         top: 0px;
         left: 0px;
-        padding: 20px 0px;
+        padding: 20px 10px;
     }
 
     #contact-section {
@@ -682,7 +682,7 @@ footer > p {
         position: relative;
         top: 0px;
         left: 0px;
-        padding: 80px 0px;
+        padding: 80px 10px;
     }
 
     #contact-heading::after {
